--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    <head>
       <meta charset="UTF-8">
    	<title>Character Generator</title>
-   	<link rel="icon" href="favicon.gif" type="image/gif" size="32x32">
-      <link rel="stylesheet" type="text/css" href="generator.css">
+   	<link rel="icon" href="img/favicon.gif" type="image/gif" size="32x32">
+      <link rel="stylesheet" type="text/css" href="css/main.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <!---->
@@ -16,7 +16,11 @@
 
 <!--Bootstrap CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
 
    </head>
 
@@ -100,7 +104,7 @@
             </table>
          </section>
 
-         <section class="section" id="Personality">
+         <section class="section" id="personality">
             <h4 id="step-title">Step 3: Personality Traits</h4>
             <table id="step">
                 <tr>
@@ -134,8 +138,8 @@
 
 
          <section class="section" id="step-buttons">
-            <button type ="button" class="btn">Previous Step</button>
-            <button type ="button" class="btn">Next Step</button>
+            <button type ="button" class="btn" id="previous">Previous Step</button>
+            <button type ="button" class="btn" id="next">Next Step</button>
          </section>
 
       </main>
@@ -152,14 +156,6 @@
                </td>
             </tr>
 
-            <tr>
-               <th>
-                  <b>Patatan: </b>
-               </th>
-               <td>
-                  <span class="rainbow">Random</span>
-               </td>
-            </tr>
          </table>
       </aside>
 
