Random option implemented

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                   	<td>
 	                    <select id="m_trait">
 	                    	<option value="Random">Randomize</option>
-	                        <option value="Random">Nice</option>
-	                        <option value="Male">Arrogant</option>
-	                        <option value="Female">Shy</option>
-	                        <option value="Fabulous">Childish</option>
+	                        <option value="Nice">Nice</option>
+	                        <option value="Arrogant">Arrogant</option>
+	                        <option value="Shy">Shy</option>
+	                        <option value="Childish">Childish</option>
 	                        <option value="Other">Other</option>
 	                    </select>
                     </td>
@@ -123,10 +123,10 @@
                   	<td>
 	                    <select id="s_trait">
 	                    	  <option value="Random">Randomize</option>
-	                        <option value="Random">Nice</option>
-	                        <option value="Male">Arrogant</option>
-	                        <option value="Female">Shy</option>
-	                        <option value="Fabulous">Childish</option>
+	                        <option value="Nice">Nice</option>
+	                        <option value="Arrogant">Arrogant</option>
+	                        <option value="Shy">Shy</option>
+	                        <option value="Childish">Childish</option>
 	                        <option value="Other">Other</option>
 	                    </select>
                     </td>
